@@ -2,11 +2,12 @@ sratom (0.6.21) unstable; urgency=medium
 
   * Add clang nullability annotations
   * Address new warnings in clang and clang-tidy 21
+  * Fix documentation build without sphinx_lv2_theme
   * Gracefully handle reading vectors with missing childType properties
   * Gracefully handle writing vectors with zero childSize properties
   * Improve error handling
 
- -- David Robillard <d@drobilla.net>  Sat, 07 Feb 2026 04:37:05 +0000
+ -- David Robillard <d@drobilla.net>  Sat, 07 Feb 2026 22:52:05 +0000
 
 sratom (0.6.20) stable; urgency=medium
 
